--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,11 @@
             <version>6.3.1.Final</version>
             <type>pom</type>
         </dependency>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.0.33</version>
+        </dependency>
 
     </dependencies>
     
